@@ -1,3 +1,9 @@
+2007-04-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* DevDiscover/CiscoIOS_cbQoS.pm:
+	Added search capability. The policy map entries copy the comment from
+	the interface.
+
 2007-01-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Plugin release 1.4
